tests/NormalTests/paczka1/fuzzy1/22345401.err
Error in line 2: OGDqCiDx S365 2,3
Error in line 5: q30bc A147 78,2
Error in line 7: hVU A866 85,0
Error in line 12: q30bc S365 58,5
Error in line 15: 5RDarl S365 65,2
Error in line 13: hVU S365 15,5
Error in line 30: hVU A147 197,1
Error in line 32: 5RDarl A866 75,0
Error in line 25: GWoIYyIxf2H A800 56,2
